--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1, h2{
 }
 
 h1{
+  float:left;
   font-size: 60px;
   margin:0;
   font-weight:normal;
@@ -37,6 +38,30 @@ a{
   float:right;
   margin-top:35px;
 }
+
+.about{
+  clear:both;
+}
+
+@media only screen and (max-width: 900px) {
+  .hire-me{
+    display:none;
+  }
+}
+
+@media only screen and (max-width: 760px) {
+  .social, h1{
+    margin-top:0;
+    float:none;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .face{
+    display:none;
+  }
+}
+
 
 .face {
   float: left;
