--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,7 +52,7 @@ layout: default
     <img class="mr-3" src="https://github.com/dependencyci.png" width="60px">
     <div class="media-body">
       <h5 class="mt-0">Dependency CI</h5>
-      Automatic compliance testing for all of you dependencies.
+      Automatic compliance for your dependencies.
     </div>
   </div>
 </div>
