--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,13 @@ layout: default
 <h3>Projects</h3>
 <div class="row">
   <div class="media col-lg-4">
+    <a href="https://pod.casts.io"><img class="mr-3" src="https://github.com/podcastsio.png" width="60px"></a>
+    <div class="media-body">
+      <h5 class="mt-0"><a href="https://pod.casts.io">Pod.casts</a></h5>
+      The ultimate podcast discovery service.
+    </div>
+  </div>
+  <div class="media col-lg-4">
     <a href="https://octobox.io"><img class="mr-3" src="https://github.com/octobox.png" width="60px"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://octobox.io">Octobox</a></h5>
@@ -25,6 +32,8 @@ layout: default
       Giving back to open source for the holidays.
     </div>
   </div>
+</div>
+<div class="row">
   <div class="media col-lg-4">
     <a href="https://manifest.fm"><img class="mr-3" src="https://github.com/themanifest.png" width="60px"></a>
     <div class="media-body">
@@ -32,8 +41,6 @@ layout: default
       A podcast all about package management.
     </div>
   </div>
-</div>
-<div class="row">
   <div class="media col-lg-4">
     <a href="https://github.com/splitrb/split"><img class="mr-3" src="https://github.com/splitrb.png" width="60px"></a>
     <div class="media-body">
@@ -46,13 +53,6 @@ layout: default
     <div class="media-body">
       <h5 class="mt-0"><a href="https://libraries.io">Libraries.io</a></h5>
       The Open source Discovery Service.
-    </div>
-  </div>
-  <div class="media col-lg-4">
-    <img class="mr-3" src="https://github.com/dependencyci.png" width="60px">
-    <div class="media-body">
-      <h5 class="mt-0">Dependency CI</h5>
-      Automatic compliance for your dependencies.
     </div>
   </div>
 </div>
