--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ img{
   width: 40px;
   height: 40px;
   background-size: 100%;
-  background-image: url('face.jpg');
+  background-image: url('/face.jpg');
 }
 
 section{
