Update projects section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -56,6 +56,29 @@ layout: default
     </div>
   </div>
 </div>
+<div class="row">
+  <div class="media col-lg-4">
+    <a href="https://manifest.fm"><img class="mr-3" src="https://github.com/sass.png" width="60px"></a>
+    <div class="media-body">
+      <h5 class="mt-0"><a href="https://manifest.fm">node-sass</a></h5>
+      Node.js bindings to libsass
+    </div>
+  </div>
+  <div class="media col-lg-4">
+    <a href="https://github.com/splitrb/split"><img class="mr-3" src="https://github.com/firstpr.png" width="60px"></a>
+    <div class="media-body">
+      <h5 class="mt-0"><a href="https://github.com/splitrb/split">First Pull Request</a></h5>
+      What was your first pull request?
+    </div>
+  </div>
+  <div class="media col-lg-4">
+    <a href="https://libraries.io"><img class="mr-3" src="https://github.com/homebrew.png" width="60px"></a>
+    <div class="media-body">
+      <h5 class="mt-0"><a href="https://libraries.io">Homebrew Bundle</a></h5>
+      Bundler for non-ruby dependencies from homebrew
+    </div>
+  </div>
+</div>
 
 <section class="posts">
   {%- if site.posts.size > 0 -%}
@@ -78,36 +101,6 @@ layout: default
 
 </section>
 
-
-<section id='code'>
-  <h3>More Projects</h3>
-  <ul>
-    <li>
-      <h4><a href='https://github.com/sass/node-sass'>node-sass</a></h4>
-      <p>Node.js bindings to libsass</p>
-    </li>
-    <li>
-      <h4><a href='https://github.com/andrew/contribulator'>Contribulator</a></h4>
-      <p>Find open source project that are friendly and welcoming</p>
-    </li>
-    <li>
-      <h4><a href='https://github.com/andrew/first-pr'>First Pull Request</a></h4>
-      <p>What was your first pull request?</p>
-    </li>
-    <li>
-      <h4><a href='https://github.com/Homebrew/homebrew-bundle'>Homebrew Bundle</a></h4>
-      <p>Bundler for non-ruby dependencies from homebrew</p>
-    </li>
-    <li>
-      <h4><a href='https://github.com/andrew/node-xbox-controller'>Xbox Controller</a></h4>
-      <p>Interface for Xbox 360 game controller into Node.js</p>
-    </li>
-    <li>
-      <h4><a href='https://twitter.com/JustOpenSourced'>Just Open Sourced</a></h4>
-      <p>A twitter bot that tweets whenever a repo is open sourced on GitHub.</p>
-    </li>
-  </ul>
-</section>
 <section id='events'>
   <h3>Events</h3>
   <ul>
