--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,23 +58,23 @@ layout: default
 </div>
 <div class="row">
   <div class="media col-lg-4">
-    <a href="https://manifest.fm"><img class="mr-3" src="https://github.com/sass.png" width="60px"></a>
+    <a href="https://github.com/sass/node-sass"><img class="mr-3" src="https://github.com/sass.png" width="60px"></a>
     <div class="media-body">
-      <h5 class="mt-0"><a href="https://manifest.fm">node-sass</a></h5>
+      <h5 class="mt-0"><a href="https://github.com/sass/node-sass">node-sass</a></h5>
       Node.js bindings to libsass
     </div>
   </div>
   <div class="media col-lg-4">
-    <a href="https://github.com/splitrb/split"><img class="mr-3" src="https://github.com/firstpr.png" width="60px"></a>
+    <a href="https://github.com/andrew/first-pr"><img class="mr-3" src="https://github.com/firstpr.png" width="60px"></a>
     <div class="media-body">
-      <h5 class="mt-0"><a href="https://github.com/splitrb/split">First Pull Request</a></h5>
+      <h5 class="mt-0"><a href="https://github.com/andrew/first-pr">First Pull Request</a></h5>
       What was your first pull request?
     </div>
   </div>
   <div class="media col-lg-4">
-    <a href="https://libraries.io"><img class="mr-3" src="https://github.com/homebrew.png" width="60px"></a>
+    <a href="https://github.com/Homebrew/homebrew-bundle"><img class="mr-3" src="https://github.com/homebrew.png" width="60px"></a>
     <div class="media-body">
-      <h5 class="mt-0"><a href="https://libraries.io">Homebrew Bundle</a></h5>
+      <h5 class="mt-0"><a href="https://github.com/Homebrew/homebrew-bundle">Homebrew Bundle</a></h5>
       Bundler for non-ruby dependencies from homebrew
     </div>
   </div>
