--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,10 +12,10 @@ layout: default
 <h3>Projects</h3>
 <div class="row">
   <div class="media col-lg-4">
-    <a href="https://pod.casts.io"><img class="mr-3" src="https://github.com/podcastsio.png" width="60px"></a>
+    <a href="https://ecosyste.ms"><img class="mr-3" src="https://github.com/ecosyste-ms.png" width="60px"></a>
     <div class="media-body">
-      <h5 class="mt-0"><a href="https://pod.casts.io">Pod.casts</a></h5>
-      The ultimate podcast discovery service.
+      <h5 class="mt-0"><a href="https://ecosyste.ms">Ecosyste.ms</a></h5>
+      Tools and open datasets to support OSS.
     </div>
   </div>
   <div class="media col-lg-4">
