--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link href='/style.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,9 +25,10 @@
 
           <ul class="navbar-nav nav ml-auto">
             <li class="nav-item">
-              <a href="https://twitter.com/teabass"><i class="fa fa-twitter"></i></a>&nbsp;
-              <a href="https://github.com/andrew"><i class="fa fa-github"></i></a>
-              <a href="{{ "/feed.xml" | relative_url }}"><i class="fa fa-rss"></i></a>
+              <a href="https://mastodon.social/@andrewnez" title="Mastodon"><i class="bi bi-mastodon"></i></a>&nbsp;
+              <a href="https://twitter.com/teabass" title="Twitter"><i class="bi bi-twitter"></i></a>&nbsp;
+              <a href="https://github.com/andrew" title="GitHub"><i class="bi bi-github"></i></a>&nbsp;
+              <a href="{{ "/feed.xml" | relative_url }}" title="RSS/Atom Feed"><i class="bi bi-rss-fill"></i></a>
             </li>
             <li class="navbar-item">
 
