--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,6 @@
     <meta content='noodp' name='robots'>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <a rel="me" href="https://mastodon.social/@andrewnez">Mastodon</a>
     <link href='/style.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -26,9 +25,9 @@
 
           <ul class="navbar-nav nav ml-auto">
             <li class="nav-item">
-              <a href="https://mastodon.social/@andrewnez" title="Mastodon"><i class="bi bi-mastodon"></i></a>&nbsp;
-              <a href="https://twitter.com/teabass" title="Twitter"><i class="bi bi-twitter"></i></a>&nbsp;
-              <a href="https://github.com/andrew" title="GitHub"><i class="bi bi-github"></i></a>&nbsp;
+              <a rel="me" href="https://mastodon.social/@andrewnez" title="Mastodon"><i class="bi bi-mastodon"></i></a>&nbsp;
+              <a rel="me" href="https://twitter.com/teabass" title="Twitter"><i class="bi bi-twitter"></i></a>&nbsp;
+              <a rel="me" href="https://github.com/andrew" title="GitHub"><i class="bi bi-github"></i></a>&nbsp;
               <a href="{{ "/feed.xml" | relative_url }}" title="RSS/Atom Feed"><i class="bi bi-rss-fill"></i></a>
             </li>
             <li class="navbar-item">
