Update bio in home.html

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 
 <div class="row">
   <div class="col-12">
-    Andrew is a software developer, based in Somerset, UK. He spends most of his days programming in Ruby, contributing to open source projects and organising local developer user groups.
+    Andrew, a software engineer based in UK, channels his efforts into Ruby programming, open source collaboration, and fostering local developer communities. He's deeply engaged with Ecosyste.ms, his current project, which prioritizes sustainability and discovery within open source. By scrutinizing open datasets and APIs, Ecosyste.ms identifies pivotal software systems within OSS ecosystems, facilitating dependency mapping to highlight critical open-source projects in need of support. 
   </div>
 </div>
 <hr>
