Update project links and descriptions on home layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,17 +58,41 @@ layout: default
 </div>
 <div class="row">
   <div class="media col-lg-4">
-    <a href="https://github.com/sass/node-sass"><img class="mr-3" src="https://github.com/sass.png" width="60px"></a>
+    <a href="https://86days.co.uk/"><img class="mr-3" src="https://github.com/86days.png" width="60px"></a>
     <div class="media-body">
-      <h5 class="mt-0"><a href="https://github.com/sass/node-sass">node-sass</a></h5>
-      Node.js bindings to libsass
+      <h5 class="mt-0"><a href="https://86days.co.uk/">86 Days</a></h5>
+      Toyota GT86 Track Day Car Rental
     </div>
   </div>
+  <div class="media col-lg-4">
+    <a href="https://trackday.social/"><img class="mr-3" src="https://github.com//trackday-social.png" width="60px"></a>
+    <div class="media-body">
+      <h5 class="mt-0"><a href="https://trackday.social/">Trackday.social</a></h5>
+       Discover upcoming track day events at the UK's premier racing circuits.
+    </div>
+  </div>
+  <div class="media col-lg-4">
+    <a href="https://argperformance.com"><img class="mr-3" src="https://github.com/argperformance.png" width="60px"></a>
+    <div class="media-body">
+      <h5 class="mt-0"><a href="https://github.com/andrew/first-pr">ARG Performance</a></h5>
+      GT86 and BRZ mods, maintenance and servicing.
+    </div>
+  </div>
+
+</div>
+<div class="row">
   <div class="media col-lg-4">
     <a href="https://github.com/andrew/first-pr"><img class="mr-3" src="https://github.com/firstpr.png" width="60px"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://github.com/andrew/first-pr">First Pull Request</a></h5>
       What was your first pull request?
+    </div>
+  </div>
+  <div class="media col-lg-4">
+    <a href="https://github.com/sass/node-sass"><img class="mr-3" src="https://github.com/sass.png" width="60px"></a>
+    <div class="media-body">
+      <h5 class="mt-0"><a href="https://github.com/sass/node-sass">node-sass</a></h5>
+      Node.js bindings to libsass
     </div>
   </div>
   <div class="media col-lg-4">
