Update ARG Performance link to point to the official website

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -74,7 +74,7 @@ layout: default
   <div class="media col-lg-4">
     <a href="https://argperformance.com"><img class="mr-3" src="https://github.com/argperformance.png" width="60px"></a>
     <div class="media-body">
-      <h5 class="mt-0"><a href="https://github.com/andrew/first-pr">ARG Performance</a></h5>
+      <h5 class="mt-0"><a href="https://argperformance.com">ARG Performance</a></h5>
       GT86 and BRZ mods, maintenance and servicing.
     </div>
   </div>
