Add podcast interviews section with links and descriptions

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -125,6 +125,44 @@ layout: default
 
 </section>
 
+<section id='podcasts'>
+  <h3>Podcast Interviews</h3>
+  <ul>
+    <li>
+      <h4><a href='https://opensourcesecurity.io/2025/2025-06-ecosystems_andrew_nesbitt/'>Ecosyste.ms with Andrew Nesbitt</a></h4>
+      <p>Open Source Security: Ecosyste.ms catalogs open source projects by tracking packages, dependencies, repositories, and more</p>
+    </li>
+    <li>
+      <h4><a href='https://podcast.sustainoss.org/270'>Ben Nickolls &amp; Andrew Nesbitt on Ecosyste.ms</a></h4>
+      <p>Sustain Episode 270: Exploring ecosyste.ms, a project using open source metadata to guide funding and support key projects</p>
+    </li>
+    <li>
+      <h4><a href='https://podcast.chaoss.community/121'>Package Metadata Working Group with Andrew Nesbitt and Damián Vicino</a></h4>
+      <p>CHAOSScast Episode 121: Discussing the formation and objectives of the Package Metadata Working Group within the CHAOSS community</p>
+    </li>
+    <li>
+      <h4><a href='https://podcast.chaoss.community/115'>Trends from UN OSS Week and OSSNA</a></h4>
+      <p>CHAOSScast Episode 115: Reflections on UN Open Source Week in New York and CHAOSScon North America</p>
+    </li>
+    <li>
+      <h4><a href='https://podcast.sustainoss.org/159'>Dawn Foster &amp; Andrew Nesbitt at State of Open Con 2023</a></h4>
+      <p>Sustain Episode 159: Andrew talks about his history with 24 Pull Requests, Libraries.io, and Ecosyste.ms</p>
+    </li>
+    <li>
+      <h4><a href='https://changelog.com/podcast/327'>Untangle your GitHub notifications with Octobox</a></h4>
+      <p>Changelog Interviews #327: How Octobox came to be and why open source maintainers love it</p>
+    </li>
+    <li>
+      <h4><a href='https://changelog.com/podcast/188'>24 Pull Requests and Libraries.io</a></h4>
+      <p>Changelog Interviews #188: A special doubleheader holiday show discussing 24 Pull Requests and Libraries.io</p>
+    </li>
+    <li>
+      <h4><a href='https://changelog.com/rfc/3'>Measuring Success in Open Source</a></h4>
+      <p>Request For Commits #3: Open source metrics and how to interpret data around dependencies and usage</p>
+    </li>
+  </ul>
+</section>
+
 <section id='events'>
   <h3>Events</h3>
   <ul>
