Add podcast episodes to the podcast interviews section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -160,6 +160,14 @@ layout: default
       <h4><a href='https://changelog.com/rfc/3'>Measuring Success in Open Source</a></h4>
       <p>Request For Commits #3: Open source metrics and how to interpret data around dependencies and usage</p>
     </li>
+    <li>
+      <h4><a href='https://www.betonyourself.com/podcast/episode-22-andrew-nesbitt'>Episode 22: Andrew Nesbitt</a></h4>
+      <p>Bet On Yourself: Creator of Libraries.io, Dependency CI and 24 Pull Requests on solving discoverability and sustainability in open source</p>
+    </li>
+    <li>
+      <h4><a href='https://www.codenewbie.org/podcast/24-pull-requests'>24 Pull Requests</a></h4>
+      <p>CodeNewbie: How code newbies can get started in making open source contributions and overcome the intimidation of making your first pull request</p>
+    </li>
   </ul>
 </section>
 
