--- a/style.css
+++ b/style.css
@@ -248,11 +248,30 @@ section li{
   margin:0 0 20px;
 }
 
-section h3, section p{
+section h3{
   margin:5px 0;
+}
+
+section li p{
+  font-size: 14px;
+  color: #656d76;
+  margin: 5px 0 0 0;
 }
 
 .media{
   margin-top: 15px;
   margin-bottom: 15px;
+}
+
+/* Post meta (dates) */
+.post-meta{
+  font-size: 14px;
+  color: #656d76;
+  margin: 0;
+}
+
+.post-description{
+  font-size: 14px;
+  color: #656d76;
+  margin: 5px 0 0 0;
 }
