Add footer with social links and style adjustments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,12 @@
       <main aria-label="Content">
         {{ content }}
       </main>
+
+      <footer>
+        <a rel="me" href="https://mastodon.social/@andrewnez">Mastodon</a> ·
+        <a href="https://github.com/andrew">GitHub</a> ·
+        <a href="{{ "/feed.xml" | relative_url }}">RSS</a>
+      </footer>
     </div>
   </body>
 </html>
