--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ img{
 
 /* Horizontal rules */
 .post-content hr{
-  height: .25em;
+  height: 1px;
   padding: 0;
   margin: 40px 0;
   background-color: #d1d9e0;
@@ -306,4 +306,21 @@ section li p{
     margin-bottom: 15px;
     text-align: center;
   }
+}
+
+footer{
+  margin-top: 40px;
+  padding: 20px 0;
+  border-top: 1px solid #eee;
+  text-align: center;
+  font-size: 14px;
+  color: #656d76;
+}
+
+footer a{
+  color: #656d76 !important;
+}
+
+footer a:hover{
+  color: #006ab2 !important;
 }
