Update personal description

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 
 <div class="row">
   <div class="col-12">
-    Andrew, a software engineer based in UK, channels his efforts into Ruby programming, open source collaboration, and fostering local developer communities. He's deeply engaged with Ecosyste.ms, his current project, which prioritizes sustainability and discovery within open source. By scrutinizing open datasets and APIs, Ecosyste.ms identifies pivotal software systems within OSS ecosystems, facilitating dependency mapping to highlight critical open-source projects in need of support. 
+    Software engineer based in the UK, focused on package management and open source metadata. Building <a href="https://ecosyste.ms">Ecosyste.ms</a>, a set of open datasets and tools for understanding and supporting critical open source infrastructure. 
   </div>
 </div>
 <hr>
