--- a/style.css
+++ b/style.css
@@ -279,12 +279,15 @@ section li p{
 @media only screen and (max-width: 600px) {
   h1,
   h1.post-title{
-    font-size: 24px !important;
+    font-size: 20px !important;
     margin-top: 10px;
     margin-bottom: 5px;
   }
   h2{
     font-size: 24px;
+  }
+  .post-content{
+    font-size: 1rem;
   }
   .post-content h2{
     font-size: 1.3em;
