--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="row">
         <nav class="navbar navbar-expand-lg w-100">
-          <span class="navbar-brand face"></span>
+          <a href="/" class="navbar-brand face"></a>
           <span class="navbar-brand mb-0 h1"> <a href="/">Andrew Nesbitt</a>     </span>
 
           <ul class="navbar-nav nav ml-auto">
