Update presentations and videos sections: remove outdated entries and add new content

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -226,23 +226,32 @@ layout: default
       <h4><a href='https://speakerdeck.com/andrew/an-introduction-to-rubymotion'>An introduction to RubyMotion</a></h4>
       <p>Presented at the London, Bristol and Cardiff Ruby User Groups about Rubymotion in 2013</p>
     </li>
-    <li>
-      <h4><a href='https://speakerdeck.com/andrew/integrating-node-dot-js'>Integrating Node.js into an existing stack</a></h4>
-      <p>Presented at the Italian Node.js Conference in 2012</p>
-    </li>
-    <li>
-      <h4><a href='https://speakerdeck.com/andrew/em-vs-node'>Event Machine vs Node.js</a></h4>
-      <p>Presented at Ruby Manor in 2011</p>
-    </li>
-    <li>
-      <h4><a href='https://speakerdeck.com/andrew/b-testing-everything-with-split'>A/B Testing everything with Split</a></h4>
-      <p>Presented at Arrrrcamp in 2011</p>
-    </li>
-  </ul>
+    </ul>
+  <p><a href="https://speakerdeck.com/andrew">View all presentations</a></p>
 </section>
 <section id='videos'>
   <h3>Videos</h3>
   <ul>
+    <li>
+      <h4><a href='https://www.youtube.com/watch?v=8sD81Dqw0Os'>Panel Discussion: The Impact of Funding</a></h4>
+      <p>With Georg Link, Dawn Foster & Alyssa Wright at OSS Summit NA 2025</p>
+    </li>
+    <li>
+      <h4><a href='https://archive.fosdem.org/2025/schedule/event/fosdem-2025-5576-open-source-funding-you-re-doing-it-wrong/'>Open source funding: you're doing it wrong</a></h4>
+      <p>With Benjamin Nickolls at FOSDEM 2025</p>
+    </li>
+    <li>
+      <h4><a href='https://www.youtube.com/watch?v=uNuPJHP2lfU'>Content Addressed Package Management</a></h4>
+      <p>Presented in 2021</p>
+    </li>
+    <li>
+      <h4><a href='https://www.youtube.com/watch?v=9NYjwskpIc0'>Republishing npm dependencies to IPFS as a micro-registry</a></h4>
+      <p>Presented in 2019</p>
+    </li>
+    <li>
+      <h4><a href='https://www.youtube.com/watch?v=hW4wUpoBHr8'>With a Little Help from My Friends</a></h4>
+      <p>Presented at Bath Ruby in 2018</p>
+    </li>
     <li>
       <h4><a href='https://brightonruby.com/2017/can-my-friends-come-too-andrew-nesbitt/'>Can my friends come too?</a></h4>
       <p>Presented at Brighton Ruby in 2017</p>
@@ -263,33 +272,5 @@ layout: default
       <h4><a href='http://www.youtube.com/watch?v=bcQAdVO3N_c'>Nodecopter</a></h4>
       <p>Recorded at Over the Air in 2013</p>
     </li>
-    <li>
-      <h4><a href='http://vimeo.com/76642005'>Turbo Charging your workflow with Node.js</a></h4>
-      <p>Recorded at Webshaped in 2013</p>
-    </li>
-    <li>
-      <h4><a href='http://skillsmatter.com/podcast/ajax-ria/an-introduction-to-rubymotion-writing-ios-apps-with-ruby'>An introduction to Rubymotion: Writing iOS apps with Ruby</a></h4>
-      <p>Recorded at London Ruby User Group in 2012</p>
-    </li>
-    <li>
-      <h4><a href='http://vimeo.com/52547197'>Integrating Node.js into your existing technology stack.</a></h4>
-      <p>Recorded at London Node User Group in 2012</p>
-    </li>
-    <li>
-      <h4><a href='http://vimeo.com/41141012'>Using Node.js and Ruby on Rails for uber productivity</a></h4>
-      <p>Recorded at London Node User Group in 2012</p>
-    </li>
-    <li>
-      <h4><a href='http://vimeo.com/32617520'>Form Analytics With inForm</a></h4>
-      <p>Recorded at HN London in 2011</p>
-    </li>
-    <li>
-      <h4><a href='http://www.youtube.com/watch?v=U7dbQ4cIe34'>Event Machine vs Node.js</a></h4>
-      <p>Recorded at Ruby Manor in 2011</p>
-    </li>
-    <li>
-      <h4><a href='http://vimeo.com/30586648'>A/B Testing everything with Split</a></h4>
-      <p>Recorded at Arrrrcamp in 2011</p>
-    </li>
-  </ul>
+    </ul>
 </section>
