Update presentations section: add new talk and remove outdated entries

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -183,6 +183,10 @@ layout: default
   <h3>Presentations</h3>
   <ul>
     <li>
+      <h4><a href='https://speakerdeck.com/andrew/ecosyste-dot-ms-conference-talk-at-easybuild-user-meeting'>Ecosyste.ms: Exploring Open Source Software Landscapes</a></h4>
+      <p>Presented at EasyBuild User Meeting in 2025</p>
+    </li>
+    <li>
       <h4><a href='https://speakerdeck.com/andrew/can-my-friends-come-too'>Can my friends come too?</a></h4>
       <p>Presented at Brighton Ruby in 2017</p>
     </li>
@@ -217,14 +221,6 @@ layout: default
     <li>
       <h4><a href='https://speakerdeck.com/andrew/the-meetup-organisers-field-guide'>The Meetup Organisers Field Guide</a></h4>
       <p>Presented at Bristol IT Mega Meet in 2013</p>
-    </li>
-    <li>
-      <h4><a href='https://speakerdeck.com/andrew/nodecopter-cheltenham-geek-nights'>Node.js + Quadcopters, what could go wrong?</a></h4>
-      <p>Presented at Cheltenham Geek Nights in 2013</p>
-    </li>
-    <li>
-      <h4><a href='https://speakerdeck.com/andrew/an-introduction-to-rubymotion'>An introduction to RubyMotion</a></h4>
-      <p>Presented at the London, Bristol and Cardiff Ruby User Groups about Rubymotion in 2013</p>
     </li>
     </ul>
   <p><a href="https://speakerdeck.com/andrew">View all presentations</a></p>
