Adjust margin for post meta

--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ section li p{
 .post-meta{
   font-size: 14px;
   color: #656d76;
-  margin: 0;
+  margin: 5px 0 20px 0;
 }
 
 .post-description{
