Add Stats link to footer navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,8 @@
         <span class="footer-nav">
           <a rel="me" href="https://mastodon.social/@andrewnez">Mastodon</a> ·
           <a href="https://github.com/andrew">GitHub</a> ·
-          <a href="{{ "/feed.xml" | relative_url }}">RSS</a>
+          <a href="{{ "/feed.xml" | relative_url }}">RSS</a> ·
+          <a href="{{ "/stats" | relative_url }}">Stats</a>
         </span>
         {% if page.layout == "post" %}
         <span class="footer-source">
