--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,8 @@
           <a rel="me" href="https://mastodon.social/@andrewnez">Mastodon</a> ·
           <a href="https://github.com/andrew">GitHub</a> ·
           <a href="{{ "/feed.xml" | relative_url }}">RSS</a> ·
-          <a href="{{ "/stats" | relative_url }}">Stats</a>
+          <a href="{{ "/stats" | relative_url }}">Stats</a> ·
+          <a href="{{ "/about" | relative_url }}">About</a>
         </span>
         {% if page.layout == "post" %}
         <span class="footer-source">
