Add search page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,7 @@
           <a href="https://github.com/andrew">GitHub</a> ·
           <a href="{{ "/feed.xml" | relative_url }}">RSS</a> ·
           <a href="{{ "/stats" | relative_url }}">Stats</a> ·
+          <a href="{{ "/search" | relative_url }}">Search</a> ·
           <a href="{{ "/about" | relative_url }}">About</a>
         </span>
         {% if page.layout == "post" %}
