Add GitHub projects fetching and display functionality

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -103,6 +103,7 @@ layout: default
     </div>
   </div>
 </div>
+<p><a href="/projects/">View all projects</a></p>
 
 <section class="posts">
   {%- if site.posts.size > 0 -%}
