Add Recent Posts section to home layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -106,6 +106,7 @@ layout: default
 <p><a href="/projects/">View all projects</a></p>
 
 <section class="posts">
+  <h3>Recent Posts</h3>
   {%- if site.posts.size > 0 -%}
     <ul>
       {%- for post in site.posts limit:10 -%}
