--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,21 +12,21 @@ layout: default
 <h3>Projects</h3>
 <div class="row">
   <div class="media col-lg-4">
-    <a href="https://ecosyste.ms"><img class="mr-3" src="/images/projects/ecosyste-ms.png" width="60px"></a>
+    <a href="https://ecosyste.ms"><img class="mr-3" src="/images/projects/ecosyste-ms.png" width="60px" alt="Ecosyste.ms"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://ecosyste.ms">Ecosyste.ms</a></h5>
       Tools and open datasets to support OSS.
     </div>
   </div>
   <div class="media col-lg-4">
-    <a href="https://octobox.io"><img class="mr-3" src="/images/projects/octobox.png" width="60px"></a>
+    <a href="https://octobox.io"><img class="mr-3" src="/images/projects/octobox.png" width="60px" alt="Octobox"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://octobox.io">Octobox</a></h5>
       Take back control of your GitHub notifications.
     </div>
   </div>
   <div class="media col-lg-4">
-    <a href="https://24pullrequests.com"><img class="mr-3" src="/images/projects/24pullrequests.png" width="60px"></a>
+    <a href="https://24pullrequests.com"><img class="mr-3" src="/images/projects/24pullrequests.png" width="60px" alt="24 Pull Requests"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://24pullrequests.com">24 Pull Requests</a></h5>
       Giving back to open source for the holidays.
@@ -35,21 +35,21 @@ layout: default
 </div>
 <div class="row">
   <div class="media col-lg-4">
-    <a href="https://manifest.fm"><img class="mr-3" src="/images/projects/themanifest.png" width="60px"></a>
+    <a href="https://manifest.fm"><img class="mr-3" src="/images/projects/themanifest.png" width="60px" alt="Manifest Podcast"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://manifest.fm">Manifest Podcast</a></h5>
       A podcast all about package management.
     </div>
   </div>
   <div class="media col-lg-4">
-    <a href="https://github.com/splitrb/split"><img class="mr-3" src="/images/projects/splitrb.png" width="60px"></a>
+    <a href="https://github.com/splitrb/split"><img class="mr-3" src="/images/projects/splitrb.png" width="60px" alt="Split"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://github.com/splitrb/split">Split</a></h5>
       The Rack Based AB testing framework
     </div>
   </div>
   <div class="media col-lg-4">
-    <a href="https://libraries.io"><img class="mr-3" src="/images/projects/librariesio.png" width="60px"></a>
+    <a href="https://libraries.io"><img class="mr-3" src="/images/projects/librariesio.png" width="60px" alt="Libraries.io"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://libraries.io">Libraries.io</a></h5>
       The Open source Discovery Service.
@@ -58,21 +58,21 @@ layout: default
 </div>
 <div class="row">
   <div class="media col-lg-4">
-    <a href="https://86days.co.uk/"><img class="mr-3" src="/images/projects/86days.png" width="60px"></a>
+    <a href="https://86days.co.uk/"><img class="mr-3" src="/images/projects/86days.png" width="60px" alt="86 Days"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://86days.co.uk/">86 Days</a></h5>
       Toyota GT86 Track Day Car Rental
     </div>
   </div>
   <div class="media col-lg-4">
-    <a href="https://trackday.social/"><img class="mr-3" src="/images/projects/trackday-social.png" width="60px"></a>
+    <a href="https://trackday.social/"><img class="mr-3" src="/images/projects/trackday-social.png" width="60px" alt="Trackday.social"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://trackday.social/">Trackday.social</a></h5>
        Discover upcoming track day events at the UK's premier racing circuits.
     </div>
   </div>
   <div class="media col-lg-4">
-    <a href="https://argperformance.com"><img class="mr-3" src="/images/projects/argperformance.png" width="60px"></a>
+    <a href="https://argperformance.com"><img class="mr-3" src="/images/projects/argperformance.png" width="60px" alt="ARG Performance"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://argperformance.com">ARG Performance</a></h5>
       GT86 and BRZ mods, maintenance and servicing.
@@ -82,21 +82,21 @@ layout: default
 </div>
 <div class="row">
   <div class="media col-lg-4">
-    <a href="https://github.com/andrew/first-pr"><img class="mr-3" src="/images/projects/firstpr.png" width="60px"></a>
+    <a href="https://github.com/andrew/first-pr"><img class="mr-3" src="/images/projects/firstpr.png" width="60px" alt="First Pull Request"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://github.com/andrew/first-pr">First Pull Request</a></h5>
       What was your first pull request?
     </div>
   </div>
   <div class="media col-lg-4">
-    <a href="https://github.com/sass/node-sass"><img class="mr-3" src="/images/projects/sass.png" width="60px"></a>
+    <a href="https://github.com/sass/node-sass"><img class="mr-3" src="/images/projects/sass.png" width="60px" alt="node-sass"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://github.com/sass/node-sass">node-sass</a></h5>
       Node.js bindings to libsass
     </div>
   </div>
   <div class="media col-lg-4">
-    <a href="https://github.com/Homebrew/homebrew-bundle"><img class="mr-3" src="/images/projects/homebrew.png" width="60px"></a>
+    <a href="https://github.com/Homebrew/homebrew-bundle"><img class="mr-3" src="/images/projects/homebrew.png" width="60px" alt="Homebrew Bundle"></a>
     <div class="media-body">
       <h5 class="mt-0"><a href="https://github.com/Homebrew/homebrew-bundle">Homebrew Bundle</a></h5>
       Bundler for non-ruby dependencies from homebrew
