--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 
 <div class="row">
   <div class="col-12">
-    Package management and open source metadata expert. Building <a href="https://ecosyste.ms">Ecosyste.ms</a>, a set of open datasets and tools for understanding and supporting critical open source infrastructure. 
+    <a href="/package-managers/">Package management</a> and open source metadata expert. Building <a href="https://ecosyste.ms">Ecosyste.ms</a>, a set of open datasets and tools for understanding and supporting critical open source infrastructure. 
   </div>
 </div>
 <hr>
